<resources>
    <string name="app_name">Kitchen Calculator</string>
    <string name="create_menu">Create Menu</string>
    <string name="create_dish">Create Dish</string>
    <string name="menus">Menus</string>
    <string name="dishes">Dishes</string>
    <string name="createIngredient">Create Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="name">Name:</string>
    <string name="restaurant">Restaurant:</string>
    <string name="menuType">Menu type:</string>
    <string name="price">Price:</string>
    <string name="cuantity">Cuantity:</string>
    <string name="cuantityType">Cuantity type:</string>
    <string name="foodType">Food type: </string>
    <string name="litres">Litres</string>
    <string name="kg">Kg</string>
    <string name="unites">Unites</string>
    <string name="create">Create</string>
    <string name="per">per</string>
    <string name="ingredientToAdd">Ingredient to add:</string>
    <string name="delete">Delete</string>
    <string name="portions">Portions:</string>
    <string name="waste">Waste:</string>
    <string name="percentage">%</string>
    <string name="next">Next</string>
    <string name="perPortion">per portion.</string>
    <string name="notMoreIngredients">There is not any more ingredients.</string>
    <string name="missingCuantity">It is missing the cuantity, please add a value.</string>
    <string name="notIngredientSelected">There is not any ingredient selected.</string>
    <string name="notIngredientchosen">There is not ingredients chosen, at least add one ingredient</string>
    <string name="noIngredients">No ingredients</string>
    <string name="emptyNameField">The name field is empty, please add a name.</string>
    <string name="theName">The name \'</string>
    <string name="alreadyExist">\' already exist.</string>
    <string name="notWasteValue">There is not waste value, please add a waste.</string>
    <string name="addCorrectWasteValue">The Waste value has to be between 0 and 99, please add a new value.</string>
    <string name="addCorrectPortions">The portions value is lower than 1, please add a correct portions value.</string>
    <string name="addPortionsValue">There is not portions value, please add a portions value.</string>
    <string name="notCuantityType">The type of cuantity is not chosen, please select one.</string>
    <string name="notPrice">This price is empty, please add a price.</string>
    <string name="totalPrice">Total price:</string>
    <string name="pricePerPortion">Price per portion:</string>
    <string name="canNotDelete">can not been deleted, because this ingredient is in one or more dishes.</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="add_dish">Add dish:</string>
    <string name="add">Add</string>
    <string name="menuName">Menu name:</string>
    <string name="noDishes">No dishes</string>
    <string name="notAnyDish">There is not any more dishes.</string>
    <string name="notDishSelected">There is not any dish selected.</string>
    <string name="notDishesChosen">There is not any dish chosen, at least add one dish.</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="sort_name">Sort by: Name</string>
    <string name="sort_price_low">Sort by: Price low</string>
    <string name="sort_price_high">Sort by: Price high</string>
    <string name="sort_restaurant">Sort by: Restaurant</string>
    <string name="sort_menu_type">Sort by: Menu type</string>
    <string name="add_as_ingredient">Add as ingredient</string>
</resources>
